--- a/app/views/flows/_flow.html.haml
+++ b/app/views/flows/_flow.html.haml
@@ -5,15 +5,14 @@
       - if f.object == @flow # and not(@flow.persisted?)
         = f.text_field :name, placeholder: "New Flow"
         .small-tools
-          = link_to "Cancel", [:flows]
-          = f.submit
-
+          = link_to "Cancel", [:flows], remote: true, class: :cancel
+          = f.submit class: :submit
       - else
         %h1
           =flow
           .small-tools
-            =link_to "Delete", flow, method: :delete, remote: true
-            =link_to "Edit", [:edit, flow], remote: true
+            =link_to "Delete", flow, method: :delete, remote: true, class: :delete, confirm: "Are you sure?"
+            =link_to "Edit", [:edit, flow], remote: true, class: :edit
 
   - unless (errors = f.object.errors).empty?
     .errors
@@ -22,25 +21,48 @@
           %li=msg
 
   .steps
-    - flow.steps.in_groups_of(4,false) do |group|
+    - if flow == @flow
+      - flow = @flow
+
+    - flow.steps.in_groups_of(4) do |group|
       .row
-        -group.each do |step|
-          = f.fields_for :step do |b|
+        - group.each do |step|
+          - unless step.nil?
             .step
-              %a(href="#")
+              = f.fields_for :steps, step do |b|
                 .dot=raw "&nbsp;"
                 .dot-inner=raw "&nbsp;"
                 .dot-small=raw "&nbsp;"
+                .arrow-right=raw "&nbsp;"
 
                 .inner
-                  - if f.object == @flow
-                    = b.text_field :name, placeholder: "Step"
-                  -else
-                    %h2=step
+                  .inner-content
+                    - if f.object == @flow
+                      = b.text_field :name, placeholder: "Step (required)", class: :step_name
+                      = b.text_area :comment, placeholder: "Comment (optional)", class: :step_comment
+
+                      .remove-magic
+                        = b.check_box :_destroy, class: :step_destroy
+
+                      = link_to "Remove", "#step_remove", class: %w{delete step_remove}, confirm: "Are you sure?"
+                    -else
+                      %h2=step
+
+                  .inner-dummy
+                    %p
+                      %br/
+                      =link_to "Add step", "#new_step", class: :step_add
 
                 .details
                   .name=step
 
-                  %p
-                    =step
-                    =step.id
+                  - if step.comment.present?
+                    %p
+                      =step.comment
+
+                  .actions
+                    %p
+                      =link_to "Done", "#step_done", class: [:done, :step_done]
+          - else
+            .step.blank
+              = raw("&nbsp;")
