--- a/app/assets/stylesheets/flow-share.sass
+++ b/app/assets/stylesheets/flow-share.sass
@@ -296,11 +296,18 @@ div.content
           border-bottom-left-radius: 3px
           width: 100%
 
+          p
+            padding: 5px
+            font-size: $font-size
+
           .actions
             background-color: #888
             height: 30px
             display: block
             margin-top: 10px
+
+            p
+              padding: 0px
 
             a
               color: black
@@ -366,4 +373,15 @@ div.content
           .details
             display: block
 
+        &.last-step
+          .arrow-right
+            border: none
+            border-radius: 50%
+            background-color: $blue
+            position: absolute
+            top: 3px
+            z-index: 10
+            width: 14px
+            height: 14px
+            right: -1px
 
