--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,16 @@
   %title FlowShare
   %meta{charset: "utf-8"}/
 
+  %meta{name:"viewport", content:"width=device-width, initial-scale=1.0, user-scalable=yes"}/
+
+  -#
+    <meta name=viewport
+    content="width=device-width, initial-scale=1.0, minimum-scale=0.5 maximum-scale=1.0">
+    <meta name="viewport" content="target-densitydpi=device-dpi">
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
   = stylesheet_link_tag    "application", media: "all"
   = javascript_include_tag "application"
   = csrf_meta_tags
