--- a/app/assets/stylesheets/desktop.sass
+++ b/app/assets/stylesheets/desktop.sass
@@ -1,10 +1,4 @@
-// Colors
-$font-size: 14px
-$green: #55C8B9
-$blue: #66CEF9
-$blue-light: #D1F0FD
-$green: #25B500
-$green-light: #4EC6AB
+@import "colors"
 
 body, html
   margin: 0px
@@ -114,7 +108,7 @@ div.content
     display: block
     position: relative
     width: 100%
-    margin-bottom: 100px
+    margin-bottom: 50px
 
     .edit, .delete, .cancel, .submit
       background-color: transparent
@@ -190,19 +184,20 @@ div.content
         color: red
 
     .steps
-      display: table
+      display: block
       position: relative
       width: 100%
       border-collapse: collapse
+      vertical-align: text-top
+      overflow: hidden
+      padding-bottom: 50px
 
-      .row
-        display: table-row
-        margin: 0px
       .step
-        display: table-cell
+        display: block
+        float: left
         position: relative
         z-index: 1
-        width: 25%
+        width: 24%
 
         p
           margin: 0px
@@ -256,7 +251,10 @@ div.content
           min-height: 70px
           margin-top: 7px
           display: block
+          width: 100%
+          overflow-y: hidden
           border-top: 6px solid $blue
+          // background-color: pink
 
           .inner-dummy
             display: none
@@ -323,7 +321,8 @@ div.content
             padding-top: 2px
             border-top: 6px solid $blue-light
             .inner-content
-              display: none
+              visibility: hidden
+              // display: none
             .inner-dummy
               display: block
           .arrow-right
