--- a/app/views/flows/_flow.html.haml
+++ b/app/views/flows/_flow.html.haml
@@ -59,4 +59,8 @@
 
             .actions
               %p
-                =link_to "Done", "#step_done", class: [:done, :step_done]
+                - if step.completed?
+                  ="Completed #{time_ago_in_words(step.updated_at)} ago."
+                - else
+                  =link_to "Done", "#step_done", class: [:done, :step_done]
+
