--- a/app/views/flows/index.js.erb
+++ b/app/views/flows/index.js.erb
@@ -1,4 +1,4 @@
-$(".live").html('<%=j render "flows", flows: @flows, flow: @flow %>');
+$(".live").html('<%=j render "flows/flows", flows: @flows, flow: @flow %>');
 
 $("li.flow").Flow();
 
