--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,7 @@
-%h1 Welcome to FlowShare
+%p Welcome
+
+%ul
+  %li=link_to "login with existing account", new_user_session_path
+  %li
+    or
+    =link_to "create new account", new_user_registration_path
