--- a/app/views/flows/_flows.html.haml
+++ b/app/views/flows/_flows.html.haml
@@ -1,9 +1,17 @@
-.flows
-  %ul
-    - if @flow.present? and @flow.new_record?
-      %li.flow.editable
-        = render "flow", flow: @flow
+- if @flow.nil? and (@flows || flows).empty?
+  %p
+    You have 0 flows. Please, create
+    =link_to [:new, :flow], remote: true do
+      %strong new flow
+    \.
 
-    - (@flows || flows).each do |flow|
-      %li.flow{class: (flow==@flow ? "editable" : "")}
-        =render flow, flow: flow
+- else
+  .flows
+    %ul
+      - if @flow.present? and @flow.new_record?
+        %li.flow.editable
+          = render "flow", flow: @flow
+
+      - (@flows || flows).each do |flow|
+        %li.flow{class: (flow==@flow ? "editable" : "")}
+          =render flow, flow: flow
