--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,37 +1,18 @@
 !!!
 %head
-  %title FlowShare
+  = render "layouts/header"
 
-  %meta{charset: "utf-8"}/
-  %meta{name:"viewport", content:"width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1, user-scalable=yes"}/
-
-  = stylesheet_link_tag    "application", media: "all"
-  = javascript_include_tag "application"
-  = csrf_meta_tags
-
-%body
+%body.public
   %header
     .wrap
-      =link_to "FlowShare", root_path, class: "logo"
-      .who
-        =link_to "Oto Brglez"
-        |
-        =link_to "Settings"
-
-  %nav
-    .wrap
-      %ul
-        %li=link_to "+ New Flow", [:new, :flow], remote: true, class: "new-flow"
-        %li=link_to "My Flows", [:flows], class: "active"
+      =link_to "FlowShare", root_url, class: "logo"
 
   .content
     .wrap
       .live
+        - flash.each do |name, msg|
+          = content_tag :div, msg, id: "flash_#{name}" if msg.is_a?(String)
         = yield
 
-  %footer
-    .wrap
-      %ul
-        %li=link_to raw("&copy;")+" 2014 - Fika, Inc"
 
 
