--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,4 +1,8 @@
 //= require_self
+//= require normalize-css/normalize
+//= require select2
 //= require ./base
 //= require ./flows
+//= require ./popup
+//= require ./error_watcher
 //= require ./mobile
