--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -36,6 +36,7 @@ header, nav, .content, footer
 header
   height: 50px
   line-height: 20px
+  border-bottom: 1px solid #eee
 
   .wrap
     padding-top: 15px
@@ -72,8 +73,7 @@ nav
   li
     float: left
     margin-right: 10px
-    &:first-child a
-      padding-left: 0px
+
   a
     display: inline-block
     padding-left: 10px
@@ -99,9 +99,8 @@ footer
     color: #333
 
 
-
 div.content
-  margin-top: 50px
+  margin-top: 10px
   min-height: 400px // remove at some point
 
 body.public
@@ -109,6 +108,7 @@ body.public
   header
     margin-top: 50px
     background-color: #F1F1F1
+
 
 
 
