Adding some code

--- a/app/views/base/app.html.haml
+++ b/app/views/base/app.html.haml
@@ -19,11 +19,11 @@
 
   #popup-outer-wrap
     .wrap
-      #popup/
+      #popup
 
   #errors-outer-wrap
     .wrap
-      #errors/
+      #errors
 
 
   = javascript_include_tag "app"
