--- a/app/assets/stylesheets/error_watcher.sass
+++ b/app/assets/stylesheets/error_watcher.sass
@@ -9,7 +9,7 @@
     max-width: 300px
 
     #errors
-      margin-top: 10%
+      margin-top: 0px
       ul, ul li
         list-style: none
         margin: 0px
