--- a/app/assets/stylesheets/flows.sass
+++ b/app/assets/stylesheets/flows.sass
@@ -30,6 +30,7 @@
       height: 20px
       line-height: 20px
       display: block
+
       .flow_access
         display: inline-block
         height: 20px
@@ -41,6 +42,10 @@
           width: 20px
           position: absolute
           left: 0px
+    &.body
+      .step-tools
+        a.step_move
+          cursor: move
 
   &.can_edit
     border-right: 5px solid orange
