--- a/app/assets/stylesheets/flows.sass
+++ b/app/assets/stylesheets/flows.sass
@@ -42,6 +42,7 @@
           width: 20px
           position: absolute
           left: 0px
+
     &.body
       .step-tools
         a.step_move
@@ -49,5 +50,13 @@
 
   &.can_edit
     border-right: 5px solid orange
+
+.flows .flow
+  .step
+    input.step_files
+      display: block
+      visibility: hidden
+      width: 0
+      height: 0
 
 
