--- a/app/assets/stylesheets/error_watcher.sass
+++ b/app/assets/stylesheets/error_watcher.sass
@@ -17,8 +17,8 @@
 
       ul li
         display: block
-        line-height: 30px
-        height: 30px
+        // line-height: 30px
+        min-height: 30px
         border-radius: 4px
         background-color: white
         border: 1px solid #eee
