Update to everything.

--- a/app/assets/stylesheets/flows.sass
+++ b/app/assets/stylesheets/flows.sass
@@ -53,7 +53,7 @@
 
 .flows .flow
   .step
-    input.step_files
+    input.step_attachments, input.step_image_attachment
       display: block
       visibility: hidden
       width: 0
