--- a/app/views/base/app.html.haml
+++ b/app/views/base/app.html.haml
@@ -11,11 +11,8 @@
 
   .content
     .wrap#live
-
-  %footer
-    .wrap
-      %ul
-        %li=link_to raw("&copy;")+" 2014 - Fika, Inc"
+      %p
+        FlowShare is loading... Please hold on...
 
   #popup-outer-wrap
     .wrap
@@ -33,7 +30,6 @@
       App.current_user = new App.Models.User(
       = current_user.to_json.html_safe
       );
-
 
 
 
