Adding some icons

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -2,6 +2,7 @@
 //= require normalize-css/normalize
 //= require select2
 //= require ./base
+//= require ./icons
 //= require ./flows
 //= require ./popup
 //= require ./error_watcher
