--- a/app/assets/stylesheets/colors.sass
+++ b/app/assets/stylesheets/colors.sass
@@ -7,3 +7,10 @@ $blue-light: #D1F0FD
 $green: #25B500
 $green-light: #4EC6AB
 
+// Colors
+// http://www.colourlovers.com/palette/2903976/Limeberry_Blue
+// EBF5E0
+// B9DD92
+// 86C543
+// 4C6D84
+// 286CA0
