--- a/app/assets/stylesheets/flows.sass
+++ b/app/assets/stylesheets/flows.sass
@@ -13,6 +13,7 @@
     background-size: 16px
     text-indent: 20px
     background-repeat: no-repeat
+
   a.flow_new
     background-image: asset-url('plus.png')
 
@@ -58,5 +59,48 @@
       visibility: hidden
       width: 0
       height: 0
+
+.flow .bar.tools, .step .bar.step-tools, li.attachment
+  display: block
+  vertical-align: top
+  a
+    display: inline-block
+    vertical-align: top
+    font-size: $font-size - 2
+
+  // border-bottom: 1px solid red
+
+//
+//  JUST DESIGN BEYOND THIS POINT
+//
+
+.flows
+  vertical-align: top
+  .flow
+    display: block
+    position: relative
+    vertical-align: top
+
+    .step
+      vertical-align: top
+      position: relative
+      display: inline-block
+      width: 33%
+      min-height: 100px
+      overflow: hidden
+
+      .ce-wrap
+        padding: 4px
+        .step_name
+
+      .inner-wrap
+        padding: 5px
+        padding-left: 0px
+
+
+
+
+
+
 
 
