--- a/app/assets/stylesheets/flows.sass
+++ b/app/assets/stylesheets/flows.sass
@@ -68,6 +68,9 @@
     vertical-align: top
     font-size: $font-size - 2
 
+.step .bar.step-tools
+  margin-top: 5px
+
   // border-bottom: 1px solid red
 
 //
@@ -91,6 +94,7 @@
 
       .ce-wrap
         padding: 4px
+        margin-bottom: 5px
         .step_name
 
       .inner-wrap
