--- a/app/assets/stylesheets/flows.sass
+++ b/app/assets/stylesheets/flows.sass
@@ -69,6 +69,11 @@
     vertical-align: top
     font-size: $font-size - 2
 
+.step .bar
+  margin-left: 10px
+  margin-right: 10px
+
+
 .step .bar.step-tools
   margin-top: 5px
 
@@ -101,6 +106,7 @@
         margin-bottom: 5px
 
       .step_image
+        padding: 20px
         img
           width: 100%
 
