Updating code. Adding #complete to step.

--- a/app/assets/stylesheets/flows.sass
+++ b/app/assets/stylesheets/flows.sass
@@ -100,24 +100,43 @@
       width: 33%
       min-height: 100px
       overflow: hidden
+      margin-bottom: 5px
+
+      .bar.buttons
+        padding: 0px
+        margin: 0px
+        margin-top: 2px
+
+        a.complete, p
+          display: block
+          text-align: center
+          height: 30px
+          line-height: 30px
+          padding: 0px
+          margin: 0px
+          color: white
+
+        a.complete
+          background-color: $green
+          color: white
+
+        p
+          background-color: $green-light
+
 
       .ce-wrap
         padding: 4px
         margin-bottom: 5px
 
       .step_image
-        padding: 20px
+        padding: 5px
         img
+          border: 1px solid #F2F2F2
+          background-color: #EEE
           width: 100%
 
       .inner-wrap
         // padding: 5px
         padding-left: 0px
-
-
-
-
-
-
 
 
