--- a/app/assets/stylesheets/icons.sass
+++ b/app/assets/stylesheets/icons.sass
@@ -17,6 +17,8 @@
     background-image: asset-url('group.png')
   &[data-i=attachment]
     background-image: asset-url('clip_2.png')
+  &[data-i=confirm]
+    background-image: asset-url('confirm.png')
 
 a.i
   padding-left: 20px
