Replacing Share link with "private/closed".

--- a/app/assets/stylesheets/flows.sass
+++ b/app/assets/stylesheets/flows.sass
@@ -33,6 +33,10 @@
       line-height: 20px
       display: block
 
+      li
+        display: inline-block
+
+
       .flow_access
         display: inline-block
         height: 20px
